tests/out/error/array/magic_methods.in.bt
mut a := [1, 2, 3]

a.push(true)
a.index('a') // FIXME should raise error
a.contains(12 as i16) // FIXME should raise error
a.push_many(['b', 'c'])

mut x := 'a'
x = a.last()
