tests/out/error/array/magic_methods.out
tests/out/error/array/magic_methods.in.bt:3:3 error: type bool not matches i32 in argument 1
tests/out/error/array/magic_methods.in.bt:6:3 error: type []string not matches []i32 in argument 1
tests/out/error/array/magic_methods.in.bt:9:1 error: cannot assign type i32 to string
